# starter-engine

./: .gitignore  engine.py  engine_compile.py  log.txt  output.mlir  parser  parser.cpp  readme.md  test.ipynb  test.ll  test.sh
engineDialect/: build.sh  log.mlir  readme.md  run.sh
engineDialect/circt_lowering/: circt_run.sh  input.mlir  log.mlir  log.txt  output.mlir  test_run.sh  todo.md
engineDialect/circt_lowering/test_handshake/: bench.ipynb  hlsinput.mlir  hlstool_test.sh  input.mlir  log.mlir  output.mlir  stress.mlir
engineDialect/circt_lowering/test_hlstool/: circt_test.sh  hlstool_test.sh  hlstooloptions.txt  log.mlir  log.txt  scftocalyx_out.mlir
engineDialect/circt_lowering/testscf/: input.mlir  log.mlir  run.sh
engineDialect/engine-opt/: CMakeLists.txt  engine-opt.cpp
engineDialect/include/Engine/: CMakeLists.txt  EngineDialect.h  EngineOps.h  EngineOps.td  EnginePasses.h
engineDialect/lib/Engine/: CMakeLists.txt  LowerLinalg.cpp  LowerSettings.cpp  LowerToAffine.cpp  LowerToLLVM.cpp  LowerToSPIR.cpp
engineDialect/outputs/: PythonOutput.ll  argmax.ll  argmax_int.ll  circt_test.ll  dot.ll  dot_int.ll  hello_world.ll  int_const.ll  matvec.ll  print.ll  print_int.ll  read.ll  relu.ll  relu_int.ll  settings.ll  stressTest.ll  verilog_convert.ll
engineDialect/test/: lit.cfg.py
engineDialect/test/Engine/: PythonOutput.mlir  argmax.mlir  argmax_int.mlir  circt_test.mlir  dot.mlir  int_const.mlir  linalg.mlir  linalgConstant.mlir  matvec.mlir  matvec_int.mlir  print copy.mlir  print.mlir  print_int.mlir  read.mlir  relu.mlir  relu_int.mlir  settings.mlir  spirv_test.mlir  storeLoad.mlir  stressTest.mlir  tensor.mlir  verilog_convert.mlir
engineDialect/test/inputs/: input_0.txt
engineLang/: CMakeLists.txt  EngineDialect.td  EngineOps.td  Lexer.h  build.sh  build_and_run.sh  cache  cache.c  gmon.out  linalg.ll  linalg2.ll  log.mlir  log1.ll  main.ll  mul.ll  out.ll  out.mlir  output.ll  parser  parser.cpp  print.ll  profile.md  profile_report.txt  readme.md  run.sh  test.mlir  test2.sh
engineLang/engine-opt/: CMakeLists.txt  engine-opt.cpp  main.cpp
engineLang/include/: EngineDialect.h  EngineOps.h
engineLang/include/Engine/: EngineDialect.td  EngineOps.h  EngineOps.td  EnginePasses.h
engineLang/lib/: EngineDialect.cpp
engineLang/lib/Engine/: CMakeLists.txt  EngineDialect.cpp  EngineOps.cpp  LowerLinalg.cpp  LowerToAffine.cpp  LowerToLLVM.cpp
engineLang/outputs/: add.ll  dot.ll  flatten.ll  linalg.ll  linalgdot.ll  matmul.ll  print.ll  relu.ll  stressTest.ll
engineLang/pipelineLowering/: input.mlir  input2.mlir  output.ll  test.sh
engineLang/test/: CMakeLists.txt  lit.site.cfg.py.in
engineLang/test/Engine/: add.mlir  dot.mlir  flatten.mlir  hello_world.mlir  linalg.mlir  linalg2.mlir  linalgdot.mlir  matmul.mlir  mul.mlir  print copy.mlir  print.mlir  relu.mlir  sample-opt.mlir  storeLoad.mlir  stressTest.mlir  tensor.mlir  tensorLinalg.mlir
mlirGen/: input.mlir  output.mlir  run.sh
parser/: parser  parser.cpp
standalone/: README.md
standalone/include/Standalone/: StandaloneOps.td
train/: mnist_ffn_complex.onnx  model.onnx  train.ipynb  train.py
